--- a/CollectionViewDemo/Base.lproj/Main.storyboard
+++ b/CollectionViewDemo/Base.lproj/Main.storyboard
@@ -36,38 +36,51 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fOS-U6-Cdd">
                                 <rect key="frame" x="0.0" y="618" width="375" height="0.0"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Drop your favourites movie here" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TNL-4V-gVk">
-                                        <rect key="frame" x="68.5" y="-15" width="237" height="30"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drop your favourite movies here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7d-I6-Nyl">
+                                        <rect key="frame" x="91.5" y="-6.5" width="193" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NPF-AE-ZwZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.1239070595854922" green="0.1239070595854922" blue="0.1239070595854922" alpha="0.536834286971831" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" id="098-hi-mPF"/>
-                                    <constraint firstItem="TNL-4V-gVk" firstAttribute="centerY" secondItem="fOS-U6-Cdd" secondAttribute="centerY" id="QfA-aw-gea"/>
-                                    <constraint firstItem="TNL-4V-gVk" firstAttribute="centerX" secondItem="fOS-U6-Cdd" secondAttribute="centerX" id="dvj-0u-eFi"/>
+                                    <constraint firstItem="y7d-I6-Nyl" firstAttribute="centerX" secondItem="fOS-U6-Cdd" secondAttribute="centerX" id="5sg-Ee-wSz"/>
+                                    <constraint firstItem="NPF-AE-ZwZ" firstAttribute="top" secondItem="fOS-U6-Cdd" secondAttribute="top" id="LS9-I7-gpY"/>
+                                    <constraint firstAttribute="height" id="bQg-pz-nu7"/>
+                                    <constraint firstAttribute="trailing" secondItem="NPF-AE-ZwZ" secondAttribute="trailing" id="ge2-MV-DNO"/>
+                                    <constraint firstItem="y7d-I6-Nyl" firstAttribute="centerY" secondItem="fOS-U6-Cdd" secondAttribute="centerY" id="lSA-rf-p55"/>
+                                    <constraint firstItem="NPF-AE-ZwZ" firstAttribute="leading" secondItem="fOS-U6-Cdd" secondAttribute="leading" id="not-Tb-fMt"/>
+                                    <constraint firstAttribute="bottom" secondItem="NPF-AE-ZwZ" secondAttribute="bottom" id="vFY-6H-px2"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="24D-fq-q3u"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vnl-8b-t41" secondAttribute="trailing" id="2uw-QZ-GXp"/>
-                            <constraint firstItem="vnl-8b-t41" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ufo-KM-r3t"/>
-                            <constraint firstItem="vnl-8b-t41" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WQi-97-cxw"/>
-                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="YK3-HT-KKK"/>
-                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="top" secondItem="vnl-8b-t41" secondAttribute="bottom" id="aoc-ie-bgE"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fOS-U6-Cdd" secondAttribute="bottom" id="dsV-QS-pai"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="2Ff-HS-MAm"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4si-6S-GYC"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="6ix-aC-224"/>
+                            <constraint firstItem="vnl-8b-t41" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Bhq-52-Ikh"/>
+                            <constraint firstItem="vnl-8b-t41" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Lix-eY-DNN"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="bTa-0v-0WL"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="top" secondItem="vnl-8b-t41" secondAttribute="bottom" id="ckj-La-mNw"/>
+                            <constraint firstItem="vnl-8b-t41" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eq0-ak-9VG"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="top" secondItem="vnl-8b-t41" secondAttribute="bottom" id="foo-SZ-AxJ"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="top" secondItem="vnl-8b-t41" secondAttribute="bottom" id="hPb-9a-LSA"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xN9-Gx-QP7"/>
+                            <constraint firstItem="fOS-U6-Cdd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xWx-Tv-luR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="7If-Xh-pLe"/>
                     <connections>
                         <outlet property="collectionView_movieCollection" destination="vnl-8b-t41" id="Pib-U8-JBk"/>
-                        <outlet property="constraint_viewConstraint" destination="098-hi-mPF" id="DgN-Wv-c1E"/>
+                        <outlet property="constraint_viewConstraint" destination="bQg-pz-nu7" id="diw-Wn-5kZ"/>
+                        <outlet property="label_DropFavouritesMovie" destination="y7d-I6-Nyl" id="dGa-Jw-4mf"/>
                         <outlet property="view_ViewDropImage" destination="fOS-U6-Cdd" id="d1k-qS-UIC"/>
                     </connections>
                 </viewController>
@@ -111,16 +124,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="W0a-ym-zux">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="i73-4w-D15" id="WSK-BW-pEx"/>
                                     <outlet property="delegate" destination="i73-4w-D15" id="eHA-QM-kB6"/>
@@ -151,6 +155,7 @@
                 <tabBarController title="Movies" automaticallyAdjustsScrollViewInsets="NO" id="dyp-vo-40p" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7PA-qr-clm">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
